fixed errors for slanted viewheight on mobile

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -24,7 +24,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #999;
+  background-color: #d4d4d4;
   transform: rotate(180deg);
 }
 .footerTopLeftContainer{
@@ -105,11 +105,11 @@
   font-size: 24px;
   padding: 0 10px;
 }
-.textContainer textarea{
+/* .textContainer textarea{
   width: 100%;
   font: 24px "Courier";
   padding:10px;
-}
+} */
 .contactCaptchaContainer{
   height: 40px;
   display: flex;
