--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -231,7 +231,7 @@
 
   /* slanted section */
   .infoSectionSlanted{
-    height: 150vh;
+    height: 200vh;
   }
   .slantedContainer{
     display: flex;
